--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 		<meta charset="utf-8" />
 		<title>篮球网站</title>
 		<style type="text/css">
+			<div class="realbottom">
+				<span class="one">张智超</span>
+				<span class="two">学号：16184814</span>
+				<img src="img/u=1162640833,445794914&fm=26&gp=0.jpg" />
+			</div>
 			*{
 				margin: 0;
 				padding: 0;
