--- a/index.html
+++ b/index.html
@@ -194,6 +194,11 @@
 		<div class="contain">
 			
 			<div class="nav">
+				<div class="realbottom">
+				<span class="one">姓名：张智超</span>
+				<span class="two">学号：16184814</span>
+				<img src="img/u=1162640833,445794914&fm=26&gp=0.jpg" />
+				</div>
 				<img src="img/lanqiu.jpg"/>
 				<ul>
 					<li><a href="">首页</a></li>
@@ -271,7 +276,7 @@
 					<p class="textarea"><span>留言板:</span><textarea name="textarea" rows="" cols=""></textarea></p>									
 			</div>
 			<div class="realbottom">
-				<span class="one">张智超</span>
+				<span class="one">姓名：张智超</span>
 				<span class="two">学号：16184814</span>
 				<img src="img/u=1162640833,445794914&fm=26&gp=0.jpg" />
 			</div>
