--- a/index.html
+++ b/index.html
@@ -194,11 +194,6 @@
 		<div class="contain">
 			
 			<div class="nav">
-				<div class="realbottom">
-				<span class="one">姓名：张智超</span>
-				<span class="two">学号：16184814</span>
-					
-				</div>
 				<img src="img/lanqiu.jpg"/>
 				<ul>
 					<li><a href="">首页</a></li>
@@ -229,6 +224,8 @@
 						</ol>
 					</li>
 					<li><a href="">选秀</a></li>
+					<li><a href="">学号：16184814</a></li>
+					<li><a href="">姓名：张智超</a></li>
 				</ul>
 			</div>
 			<div class="middle">
