--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 						</ol>
 					</li>
 					<li><a href="">选秀</a></li>
-					<li class="chao">张智超</li>
+					<li class="chao">安全18-3班-张智超</li>
 					<li class="chao1">学号：16184814</li>
 				</ul>
 			</div>
